--- a/MvcMovie/Views/_ViewStart.cshtml
+++ b/MvcMovie/Views/_ViewStart.cshtml
@@ -1,3 +1,6 @@
 ﻿@{
     Layout = "_Layout";
 }
+
+@* 25.10.2022. I continue working with https://learn.microsoft.com/en-us/aspnet/core/tutorials/first-mvc-app/adding-view?view=aspnetcore-6.0&tabs=visual-studio
+    *@
