--- a/MvcMovie/Views/HelloWorld/Welcome.cshtml
+++ b/MvcMovie/Views/HelloWorld/Welcome.cshtml
@@ -10,3 +10,13 @@
         <li>@ViewData["Message"]</li>
     }
 </ul>
+
+@* 26.10.2022. I continue with tutorial now being in the
+        page https://learn.microsoft.com/en-us/aspnet/core/tutorials/first-mvc-app/adding-model?view=aspnetcore-6.0&tabs=visual-studio
+        like this: "Add a data model class
+    Visual Studio
+    Visual Studio Code
+    Visual Studio for Mac
+    Right-click the Models folder > Add > Class. Name the file Movie.cs.
+
+    Update the Models/Movie.cs file with the following code:"*@
